Don't skip updating widget when resizing ClientControlledShellSurface

ClientControlledShellSurface doesn't use configure to resize.

BUG=828586
TEST=manual

Change-Id: I19c165741917f8a6855fab20a5938e9b020e02c0
Reviewed-on: https://chromium-review.googlesource.com/994173
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548433}
Former-commit-id: 0abbd025a6e057425ae5768fa251f9a1b6874f45